@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 
 public class BpmManagerDashboardServiceImpl implements BpmManagerDashboardService {
@@ -60,8 +59,7 @@ public class BpmManagerDashboardServiceImpl implements BpmManagerDashboardServic
     List<WkfModel> wkfModelList = bpmMgrDashboardUserService.getWkfModelsByUser(user);
     long totalRecord = wkfModelList.size();
 
-    List<WkfModel> showWkfModels =
-        wkfModelList.stream().skip(offset).limit(FETCH_LIMIT).collect(Collectors.toList());
+    List<WkfModel> showWkfModels = wkfModelList.stream().skip(offset).limit(FETCH_LIMIT).toList();
 
     showWkfModels.forEach(
         wkfModel -> {
